2009-02-13  Israel Herraiz <herraiz@libresoft.es>

	* mlstats:
	* pymlstats/__init__.py:
	* pymlstats/analyzer.py:
	* pymlstats/database.py:
	* pymlstats/datamodel.py:
	* pymlstats/fileextractor.py:
	* pymlstats/htmlparser.py:
	* pymlstats/main.py:
	* pymlstats/version.py:
	* pymlstats/utils.py:
	* setup.py:

	Moved URL retrieval and compressed files handling to a new module
	called utils.
	Updated copyright info.
	
2009-02-13  Israel Herraiz <herraiz@libresoft.es>

	* pymlstats/htmlparser.py:
	* pymlstats/main.py:

	MyHTMLParser now returns a list with links that are exclusively
	mboxes. That part has been removed from main.py.
	
2008-10-10  Juan Francisco Gato Luis <jfcogato@gsyc.es>

        * pymlstats/database.py
	added filter function that erase the quotation marks from the e-mails
	address

2008-09-16  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* db/mlstats_model_dbdesigner.png
	* db/mlstats_model_dbdesigner.sql
	* db/mlstats_model_dbdesigner.xml
	
	DB schema modified to include a is_response_of FK.

2008-07-22  Liliana Tovar <lilitovar@gsyc.es>

	* db/data_model.sql
	* db/mlstats_model_dbdesigner.png
	* db/mlstats_model_dbdesigner.sql
	* db/mlstats_model_dbdesigner.xml
	
	Added database schema.

2008-07-22  Liliana Tovar <lilitovar@gsyc.es>

	* pymlstats/analyzer.py:
	* pymlstats/database.py:
	* pymlstats/datamodel.py:
	
	Database model modified. 
	Added a numeric identifier for people entries, instead of using the 
	email address. 'author_email_address' deleted from messages table. The 
	value can be found into the 'messages_people' table.

2008-03-11  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* debian/changelog:
	* debian/control:
	* debian/copyright:
	* debian/mlstats.docs:
	* debian/rules:
	* man/mlstats.1:
	* setup.py:

	The Debian package is now Lintian compliant. The Python egg files
	are now automatically generated, so the mlstats.egg-info directory
	has been removed.
	
2007-12-03  Israel Herraiz <herraiz@gsyc.escet.urjc.es>
